--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <img src="https://raw.githubusercontent.com/aflacake/fantasygirl-robot-lcd/main/img/mata.png" id="mata2">
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/clmtrackr/1.1.2/clmtrackr.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
