--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clmtrackr/1.1.2/clmtrackr.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/auduno/clmtrackr/models/model_pca_20_svm.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
