--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <img src="https://raw.githubusercontent.com/aflacake/fantasygirl-robot-lcd/main/img/mata.png" id="mata2">
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/clmtrackr/1.1.2/clmtrackr.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/auduno/clmtrackr/models/model_pca_20_svm.js"></script>
+    <script src="https://unpkg.com/clmtrackr@1.1.2/build/clmtrackr.min.js"></script>
+    <script src="model_pca_20_svm.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
